# ufifo

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  benchmark_atomic.txt  benchmark_barrier.txt  performance_report.md  revert.patch  run_benchmark_setup.sh  ufifo.pc.in
.github/workflows/: benchmark.yml  ci.yml  release.yml
cmake/: Coverage.cmake  DbgInfo.cmake  Doxygen.cmake  GTest.cmake  GitVersion.cmake  Sanitizers.cmake
cmake/toolchains/: aarch64-linux-gnu.cmake  arm-linux-gnueabihf.cmake
dev/bench/: data.js
docs/: Doxyfile.in
example/: bytestream.c  epoll.c  nolock.c  pressure-block.c  pressure.c  record-block.c  record-tag-cb.c  record-tag.c  record.c
inc/: dict.h  fdlock.h  kfifo.h  log2.h  mutex.h  ufifo.h  ufifo_internal.h  ufifo_layout.h  utils.h
src/: dict.c  fdlock.c  kfifo.c  mutex.c  ufifo.c  ufifo_broker.c  ufifo_epoll.c  ufifo_info.c  ufifo_init.c  ufifo_opts.c  ufifo_sync.c
test/: ufifo_bench.cpp  ufifo_benchmark.cpp  ufifo_test.cpp  ufifo_test_adapter.hpp
